# langchain1.0-in-10-lines

./: .example.env  .gitignore  README.md  demo-all-store-usage.py  demo-key-difference.py  demo-store-methods.py  demo-store-usage.py  demo-store-vs-checkpointer.py  langgraph.json  middleware_analysis_report.md  optimized_middleware_example.py  package.json  pnpm-lock.yaml  requirements.txt  test_interactive_middleware.py  test_middleware_calls.py  test_middleware_count.py  test_middleware_with_tools.py
single-file-agent-advanced/: 00-agent-vllm-muti-modal.py  01-agent-with-long-short-term-memory.py  02-agent-customize-state-and-modify-via-hardcode-to-switch-llm.py  02-agent-customize-state-to-switch-llm.py  03-agent-customize-context-to-select-tools.py  03-agent-customize-state-and-modify-via-tool-for-task-guidance.py  04-agent-customize-state-and-modify-via-tool-for-task-guidance-with-st-memory.py  05-agent-customize-context-to-select-tools.py  06-agent-with-tools-as-subagent.py  07-agent-RAG-webpage-source.py  07-agent-RAG.py
single-file-agent-langgraph/: 00-pipline.py  01-edges-and-parallel-run.py  02-conditional-edge.py  03-conditional-edges-in-preprocess-node.py  04-memory.py  05-email-agent.py  (+7 more)
tiny-project-agent/01-agent-RAG-Unstructured/: .env.example  CustomConverter.py  CustomVectorDB.py  LLM.py  README.md  main.py  pyproject.toml
tiny-project-agent/01-agent-RAG-Unstructured/docs/: company_profile.md  market_analysis.pptx  monthly_sales_data.xlsx  sales_strategy_report.docx
tiny-project-agent/01-agent-RAG-Unstructured/test/: test_vector_db.py
(+45 files in other folders)
